Use our own units scss file.

--- a/lib/compass_rhythm/_vertical_rhythm.scss
+++ b/lib/compass_rhythm/_vertical_rhythm.scss
@@ -1,6 +1,4 @@
-@import "compass/support";
-@import "compass/layout/grid-background";
-@import "compass/typography/units";
+@import "units";
 
 // The default font size for all text in pixels
 $base-font-size: 16px !default;
