--- a/lib/compass_rhythm/_vertical_rhythm.scss
+++ b/lib/compass_rhythm/_vertical_rhythm.scss
@@ -40,6 +40,9 @@ $base-half-leader: $base-leader / 2;
 // @private Whether the rhythm output is in absolute units (px) or not (em, rem)
 $relative-font-sizing: if($rhythm-unit == px, false, true);
 
+// Should we support IE6 by setting base font size?
+$compass-rhythm-support-ie6: false;
+
 // Validate units
 @if unit($base-font-size)   != 'px' { @warn "$base-font-size must resolve to a pixel unit."; }
 @if unit($base-line-height) != 'px' { @warn "$base-line-height must resolve to a pixel unit."; }
@@ -95,7 +98,7 @@ $relative-font-sizing: if($rhythm-unit == px, false, true);
 @mixin establish-baseline($font-size: $base-font-size) {
   $relative-size: 100% * ($font-size / $browser-default-font-size);
 
-  @if support-legacy-browser(ie, "6") and (not $relative-font-sizing) {
+  @if $compass-rhythm-support-ie6 and (not $relative-font-sizing) {
     // IE 6 refuses to resize fonts set in pixels and it weirdly resizes fonts
     // whose root is set in ems. So we set the root font size in percentages of
     // the default font size, even if we are using absolute sizes elsewhere.
